compiler/tests/fa/errors/generic_arg_count.salam
// انتظار: خطا۰۱۲
// زبان: فارسی
تابع فاکتوریل(مقدار):
    بازگشت مقدار
تمام

تابع اصلی:
    چاپ فاکتوریل()
تمام
